fix(Table): z-index issues, close #2820

--- a/src/table/main.scss
+++ b/src/table/main.scss
@@ -72,7 +72,7 @@
         }
     }
     &-affix {
-        z-index: 1;
+        z-index: 10;
         overflow: hidden;
     }
     &-header-resizable {
